25-08-21

removed case sensitivity to some tests - including 'az_ignore'

Further deadlock code

18-08-21

new function 'Exists'

Code which changes how the backups are created allowing a subset of a database to be downloaded

allows for 'filterby(top/bottom <number> <expression>)'

including edit:cleartemporary

Altered the ReportExecutor so as to read the line to be executed immediately before execution - allowing spreadsheet formulae to adjust it.

Allows the preprocessor to output more than one line for each input line by checking whether the first cell in the line is not blank.

getCellValue has been adapted to take Sheet, row, col rather than cell as this is less likely to create exceptions

upgrade keikai, dealock diagnostics

28-07-21

Remove debug code

27-07-21

Functions to try to fix corruption on load and detect/stop circular references

When there is a blank column heading on one-line headings, will be prepared to look at the cell above in case that is the heading

16-07-21

Dev has its own BSX directories

No limits to region size on csv download, run the followon execute when downloading/modifying/uploading a report with data in it,

fixed 'getUniqueName' problem

with capability to handle parameter USDATES on import file

07-07-21

stop stack overflow where the children levels go into thousands

Agile CRM and mailchimp integration work

added 'edit:zapattributes <pipe separated attribute list>'

24-06-21

No 0s on scale

Inspect "x more . . ." improvement

Support pre processor on pending uploads

Delete business

12-05-21

UI adjustments - tidying up the inspect database window

Keikai libraary upgrade

will clear attributes if the parameter 'cleardata' is set

will persist highlight options between reports

first version of workbook pre processor code, may need more testing

Revised test to determine if a longer string is a date - not a range of dates (Arcana fix)

check that the existing user choice is valid for chosen tree

13-04-21
